fixes word wrap problem

--- a/RNADNA/index.css
+++ b/RNADNA/index.css
@@ -17,6 +17,8 @@ body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
+  word-wrap:break-word;
+  table-layout: fixed;
 }
 .site-wrapper-inner {
   display: table-cell;
